--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,12 @@ asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==5.1.6
+django-cors-headers==4.7.0
+django-crispy-forms==2.3
 django-embed-video==1.4.10
+django-jazzmin==3.0.1
+django-rest-framework==0.1.0
+djangorestframework==3.15.2
 easy-thumbnails==2.10
 idna==3.10
 miss==0.5
@@ -24,3 +29,4 @@ pytweening==1.2.0
 requests==2.32.3
 sqlparse==0.5.3
 urllib3==2.3.0
+whitenoise==6.9.0
